--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ chrono = "0.4.40"
 clap = { version = "4.5.36", features = ["derive"] }
 colored = "3.0.0"
 serde = { version = "1.0.219", features = ["derive"] }
-signal-hook = "0.3.17"
+signal-hook = { version = "0.3.17", features = ["iterator"] }
 thiserror = "2.0.12"
 toml = "0.8.20"
 
