--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ serde = { version = "1.0.219", features = ["derive"] }
 signal-hook = { version = "0.3.17", features = ["iterator"] }
 thiserror = "2.0.12"
 toml = "0.8.20"
+tokio = { version = "1.28", features = ["rt", "process", "io-util", "sync", "signal", "macros", "time"] }
+futures-lite = "1.13"
 
 [dev-dependencies]
 tempfile = "3.8"
